org.mmisw.ont - Ontology and Term URI resolver 
Carlos Rueda - MMI / MBARI
$Id$

ChangeLog

2009-12-28   1.6.0.beta3
	- OntGraphAG: removed unused code.
	- Reviewing how to associate user-specified named graphs..
	
2009-12-24   1.6.0.beta2
	- OntServlet._getUsersRdf: adjustments. Versioned URIs (using current time). Empty prefix associated with
	  the versioned URI.
	
2009-12-23   1.6.0.beta1
	Preparing for handling "internal" ontologies. An internal ontology provides supporting information
	for the MMI ORR. 

	- OntServlet._getUsersRdf: "_usrsrdf": outputs the list of registered users in RDF/XML format.
	

2009-12-18   1.5.0.beta5
	- OntGraphAG.loadOntology: load ontology and lauch indexing of new triples
	- OntGraphAG._loadOntology: remove all statements associated with the graph before
	  parsing the new contents.
	- OntGraphAG.init: report (log.info): index flavors, unindexed threshold, unindexed triples, total triples.
	  Note: no action is taken if the reported unindexed triples is > 0 at init time; this is because:
	  	- reinit always reindexes all triples
	  	- loadOntology indexes the new triples
	  Normally, unindexed triples at init time should be zero.
	  
	  NOTE: the setUnindexedThreshold is not yet used, so no automatic reindexing of the triple store is enabled. 
	  

2009-12-18   1.5.0.beta4
	Have been looking at other possible triple stores (Open Anzo, 4store, sesame, TDB, ...)
	
2009-12-18   1.5.0.beta4
	- org.mmisw.ont.graph.allegro: new package for AG related types
	- org.mmisw.ont.graph.mem: new package for the previous memory based model
	
	- OntGraphAG.init(): populates triple store and also indexes it.
	
	Fortunately, no strange behavior on the MMIWEB deployment. 
	Here are some stats:
	
	Reload (http://mmisw.org/ont/?_reload):
		- 140 ontologies to be loaded
		- triple store populated in 1:10.706 minutes:seconds  
		- #triples= 92651
		- indexing completed in 11.015 seconds
		
	Query involving inference: